Initial site layout and instagram feed

--- a/ghost/content/themes/coderghosttheme-master/index.hbs
+++ b/ghost/content/themes/coderghosttheme-master/index.hbs
@@ -5,5 +5,8 @@
 </div>
 {{! The main content area on the homepage }}
 {{! The tag below includes the post loop - partials/loop.hbs }}
+<div class="lightwidget-wrapper">
+<!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/cfd61b8eeb995abba7a5389b670b4467.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+</div>
 {{> "loop"}}
 
