--- a/ghost/content/themes/coderghosttheme-master/partials/navbar.hbs
+++ b/ghost/content/themes/coderghosttheme-master/partials/navbar.hbs
@@ -11,9 +11,29 @@
 <h5>{{@blog.title}}</h5>
 <hr>
 <ul class="list-unstyled menu">
+
     <li>
-        <a href="https://github.com/mbejda" target="_blank">
+        <a href="http://www.linkedin.com/in/raydollete" target="_blank">
+            <i class="el el-linkedin"></i> LinkedIn
+        </a>
+    </li>
+    <li>
+        <a href="https://github.com/Raydius" target="_blank">
          <i class="el el-github"></i> GitHub
+        </a>
+    </li>
+
+    <li>
+        <a href="https://medium.com/@raydollete" target="_blank">
+            <!-- Use this until Elusive Icons produces a specific Medium icon -->
+            <i class="el"><img src="/content/images/mediumlogo.png" style="height:13px;width:13px;"/></i> Medium
+        </a>
+
+    </li>
+
+    <li>
+        <a href="https://www.instagram.com/raytalkstech/" target="_blank">
+            <i class="el el-instagram"></i> @raytalkstech
         </a>
     </li>
 
@@ -33,12 +53,7 @@
         </li>
     {{/if}}
 
-    <li>
-        <a href="skype:mbejda2?add" target="_blank">
-            <i class="el el-skype"></i> mbejda2
-        </a>
 
-    </li>
 </ul>
 
 
