--- a/src/components/layout/Layout.css
+++ b/src/components/layout/Layout.css
@@ -78,12 +78,25 @@ main {
   text-decoration: none;
   color: #c0c0c0;
   font-weight: 500;
-  transition: color 0.3s ease, text-shadow 0.3s ease;
+  transition: color 0.3s ease, text-shadow 0.3s ease, border-bottom 0.3s ease;
+  position: relative;
+  padding-bottom: 3px;
 }
 
 .nav a:hover {
   color: #ffffff;
   text-shadow: 0 0 8px rgba(255, 255, 255, 0.4);
+}
+
+.nav a:focus {
+  outline: none; 
+  color: #ffffff;
+  font-weight: 600; /* Make text slightly bolder when focused */
+  text-shadow: 0 0 8px rgba(255, 255, 255, 0.4);
+}
+
+.logo a:focus {
+	outline:none;
 }
 
 /* Footer styles */
